fix(auth): update logout response status code from 200 to 204
